--- a/themes/fivealive/scss/_selectors-for-options.scss
+++ b/themes/fivealive/scss/_selectors-for-options.scss
@@ -586,8 +586,10 @@ input[type="checkbox"].preffilter-toggle-round:checked + label::before {
 	background: $dropdown-bg;
 }
 
+.blog-postbody-title,
+.blog-postbody-title a,
 .postbody-title .title > .card-title a.link,
-.card-header a {
+.postbody .card-header a {
 	color: #ffffff;
 }
 
